# effective-winner

./: setup.cfg  setup.py
blank/: __init__.py  blank_func.py  main.py
tests/: test_blank.py  test_say_hello.py
